deploy/istio/spring-boot-kubernetes-istio.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-kubernetes
  labels:
    app: spring-boot-kubernetes
    service: spring-boot-kubernetes
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: spring-boot-kubernetes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-kubernetes-v5
  labels:
    app: spring-boot-kubernetes
    version: 5.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-kubernetes
      version: 5.0.0
  template:
    metadata:
      labels:
        app: spring-boot-kubernetes
        version: 5.0.0
    spec:
      serviceAccountName: spring-boot-kubernetes
      automountServiceAccountToken: false
      containers:
        - name: spring-boot-kubernetes
          image: ashutoshsahoo/spring-boot-kubernetes:8.0.0
          resources:
            requests:
              memory: "500Mi"
              cpu: "500m"
              ephemeral-storage: "2Gi"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - name: http
              containerPort: 8080
          securityContext:
            runAsUser: 1000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-kubernetes-v6
  labels:
    app: spring-boot-kubernetes
    version: 6.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-boot-kubernetes
      version: 6.0.0
  template:
    metadata:
      labels:
        app: spring-boot-kubernetes
        version: 6.0.0
    spec:
      serviceAccountName: spring-boot-kubernetes
      automountServiceAccountToken: false
      containers:
        - name: spring-boot-kubernetes
          image: ashutoshsahoo/spring-boot-kubernetes:8.0.0
          resources:
            requests:
              memory: "500Mi"
              cpu: "500m"
              ephemeral-storage: "2Gi"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - name: http
              containerPort: 8080
          securityContext:
            runAsUser: 1000
---
