deploy/istio/spring-boot-kubernetes-istio-gateway.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: spring-boot-kubernetes
spec:
  host: spring-boot-kubernetes
  trafficPolicy:
    loadBalancer:
      simple: RANDOM

    connectionPool:
      tcp:
        maxConnections: 200
      http:
        http1MaxPendingRequests: 100
        maxRequestsPerConnection: 100
        idleTimeout: 30s

    outlierDetection:
      consecutive5xxErrors: 5
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 50

  subsets:
    - name: v5
      labels:
        version: 5.0.0
    - name: v6
      labels:
        version: 6.0.0
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: spring-boot-kubernetes-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: spring-boot-kubernetes
spec:
  hosts:
    - "*"
  gateways:
    - spring-boot-kubernetes-gateway
  http:
    - match:
        - uri:
            prefix: /api/v5
      route:
        - destination:
            host: spring-boot-kubernetes
            subset: v5

      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: gateway-error,connect-failure,refused-stream,5xx

      timeout: 10s
    - match:
        - uri:
            prefix: /api/v6
      route:
        - destination:
            host: spring-boot-kubernetes
            subset: v6

      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: gateway-error,connect-failure,refused-stream,5xx

      timeout: 10s
---
